Update color institucional

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -35,6 +35,18 @@
 .banner-principal__img
   z-index: 1
 
+.titulo-principal.color-acento-contenido .titulo-principal__numero
+  background-color: #39A900
+
+.titulo-sexto.color-acento-contenido
+  border-left-color: #39A900
+
+.titulo-segundo.color-acento-contenido::after      
+  border-left-color: #39A900
+
+.v--green
+  background-color: #39A900 !important
+
 
 @-webkit-keyframes rotation 
   from 
@@ -93,8 +105,8 @@
   padding-bottom: 7px
   margin-bottom: 2rem
   border-bottom: 3px solid #FF6B00
-.txt--orange
-  color: #FF6B00
+.txt--green
+  color: #39A900 !important
 
 ///// colores --------------------------------------
 .clr--gris
