--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -181,6 +181,29 @@ $bp-max-xs: 576px
 // -----------------------------------------------------
 // COMPONENTES -----------------------------------------
 // -----------------------------------------------------
+
+.titulo-principal.color-acento-contenido .titulo-principal__numero
+  background-color: #39A900
+
+.boton:active, .boton--sm:active, .boton:focus, .boton--sm:focus, .boton:hover, .boton--sm:hover  
+  background-color: #39A900
+  *
+    color: white    
+.boton, .boton--sm
+  background-color: #39A900
+  *
+    color: white   
+.titulo-sexto.color-acento-contenido
+  border-left-color: #39A900
+
+.titulo__template--a::before
+  background-color: #39A900  
+
+.titulo-segundo.color-acento-contenido::after      
+  border-left-color: #39A900
+
+.v--green
+  background-color: #39A900 !important  
 .actividad
   background-color: #F2F2F2  
 // Imágen banner principal -----------------------------
